# Rust-Projects

./: .gitignore  .gitmodules
API-Calling/: Cargo.toml
API-Calling/src/: main.rs
Async-Requests/: Cargo.toml
Async-Requests/src/: main.rs
Basic-Auth/: Cargo.toml
CSV-Read/: Cargo.toml
CSV-Read/src/: main.rs
Extract-Links/: Cargo.toml
Extract-Links/src/: main.rs
GET-Request/: Cargo.toml
GET-Request/src/: main.rs
Image-Download/: Cargo.toml
Image-Download/src/: main.rs
JSON-Read/: Cargo.toml
JSON-Read/src/: main.rs
JSON-Write/: Cargo.toml
JSON-Write/src/: main.rs
Neural-Network/: Cargo.toml
Neural-Network/src/lib/: activations.rs  matrix.rs  mod.rs  network.rs
Rust-SQLite/: Cargo.toml  sqlite.db
Rust-SQLite/src/: main.rs
Rusty-Backend/: .gitignore  Cargo.toml
Rusty-Backend/pizzashop.db/: IDENTITY
Rusty-Backend/src/: main.rs  models.rs
Rusty-Backend/src/db/: database.rs
Rusty-Backend/src/models/: pizza.rs
Video-Streamer/: Cargo.toml  index.html  style.css
Video-Streamer/src/: main.rs
